# src/main/go/controller/LoanSanction.go
@@ -1,50 +1,0 @@
-/*
- * Loan
- *
- * Loan sanction write docs
- *
- * API version: 0.0.1
- * Contact: shivukumar076@gmail.com
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package controller
-
-import (
-	"net/http"
-
-	"github.com/SbFinanceFbd/BranchRead/src/main/go/model"
-	"github.com/gin-gonic/gin"
-)
-
-// LoanSanctionPost godoc
-// @Summary      Loan Sanction
-// @Description  Loan Sanction
-// @Tags         Loan Sanction
-// @Accept       json
-// @Produce      json
-// @Param        data body model.LoanSanctionRequest true "The input LoanSanctionRequest struct"
-// @Success      200  {object}  model.LoanSanctionRequest
-// @Failure      400  {object}  model.LoanSanctionResponse
-// @Failure      404  {object}  model.LoanSanctionResponse
-// @Failure      500  {object}  model.LoanSanctionResponse
-// @Router       /loanSanction [post]
-func LoanSanctionPost(c *gin.Context) {
-	var loanSanctionRequest model.LoanSanctionRequest
-	if err := c.BindJSON(&loanSanctionRequest); err != nil {
-		return
-	}
-	var loanSanctionResponse model.LoanSanctionResponse
-	c.JSON(http.StatusOK, loanSanctionResponse)
-}
-
-// ping godoc
-// @Summary      Ping
-// @Description  Ping
-// @Tags         Ping
-// @Success      200              {string}  string    "ok"
-// @failure      400              {string}  string    "error"
-// @Router       /ping [get]
-func Ping(c *gin.Context) {
-	c.String(http.StatusOK, "PONG")
-}
