# src/main/go/model/LoanSanctionRequest.go
@@ -1,59 +1,0 @@
-/*
- * Loan
- *
- * Loan sanction write docs
- *
- * API version: 0.0.1
- * Contact: shivakumar@supernet-india.com
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package model
-
-type LoanSanctionRequest struct {
-	LoanNum string `json:"loanNum"`
-
-	RelativeName1 string `json:"relativeName1,omitempty"`
-
-	RelativeName2 string `json:"relativeName2,omitempty"`
-
-	RelativeNum1 string `json:"relativeNum1,omitempty"`
-
-	RelativeNum2 string `json:"relativeNum2,omitempty"`
-
-	Amount int32 `json:"amount,omitempty"`
-
-	Date string `json:"date,omitempty"`
-
-	ReferredBy string `json:"referredBy,omitempty"`
-
-	LoanCollectTblName string `json:"loanCollectTblName"`
-
-	// Grace Period Status
-	IsInGracePeriod string `json:"isInGracePeriod"`
-
-	PenaltyTblName string `json:"penaltyTblName"`
-
-	PenaltyDate string `json:"penaltyDate"`
-
-	IsEligibleForReducedInterest string `json:"isEligibleForReducedInterest"`
-
-	KycId string `json:"kycId"`
-
-	LoaPackId string `json:"loaPackId,omitempty"`
-
-	PigmyNum string `json:"pigmyNum,omitempty"`
-
-	// Order Status
-	Status string `json:"status"`
-
-	CreatedAt string `json:"createdAt"`
-
-	UpdatedAt string `json:"updatedAt"`
-
-	CreatedBy string `json:"createdBy"`
-
-	UpdatedBy string `json:"updatedBy"`
-
-	Remarks string `json:"remarks"`
-}
