# src/main/go/model/LoanSanctionResponse.go
@@ -1,16 +1,0 @@
-/*
- * Loan
- *
- * Loan sanction write docs
- *
- * API version: 0.0.1
- * Contact: shivakumar@supernet-india.com
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package model
-
-type LoanSanctionResponse struct {
-	Code    int    `json:"code" example:"400"`
-	Message string `json:"message" example:"status bad request"`
-}
